--- a/playbook.yml
+++ b/playbook.yml
@@ -8,10 +8,10 @@
       sudo: yes
     - setup:
   vars:
-    app_name: state_2c_geonode 
+    app_name: state_geonode 
     github_user: state-hiu
-    server_name: dev.secondarycities.geonode.state.gov
-    repo_name: 2C-GeoNode
+    server_name: dev.geonode.state.gov
+    repo_name: State-GeoNode
     deploy_user: ubuntu
   roles:
      - { role: GeoNode.geonode }
